# foamstream

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/datahouse/: datahouse.avsc  datahouse.py
examples/debye/: debye.py
foamstream/: __init__.py  client.py  fake_stream.py  logger.py  serializer.py  streamer.py  utils.py
foamstream/euxfel/: app.py  config.py  file_server.py  gui.py  logger.py
foamstream/sls/: debye.py  tomcat.py
foamstream/sls/schemas/: debye.avsc  debye.json
foamstream/sls/tests/: debye_consumer.py  test_tomcat.py  tomcat_consumer.py
foamstream/tests/: conftest.py  test_streamer.py
foamstream/tomo/: app.py
foamstream/tomo/tests/: test_tomo_app.py  tomo_consumer.py
foamstream/writer/: writer.py
