[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foamstream"
version = "0.1.0dev"
description = ""
authors = [
    {name = "Jun Zhu", email="zhujun981661@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Streaming",
]
dependencies = [
    'numpy',
    'pyzmq',
]
requires-python = ">=3.9"

[project.optional-dependencies]
gui = [
    "foamgraph"
]
test = [
    "pytest",
    "pytest-cov",
]
euxfel = [
    "extra-data"
    "karabo-bridge"
]

[project.urls]
repository = "https://github.com/zhujun98/foamstream"
