[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foamstream"
version = "0.1.1"
description = ""
authors = [
    {name = "Jun Zhu", email="zhujun981661@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
requires-python = ">=3.9"

dependencies = [
    'h5py>=3.7.0',
    'numpy',
    'pyzmq>=24.0.0',
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "foamclient"
]
euxfel = [
    "foamgraph",
    "extra-data",
    "karabo-bridge"
]

[project.scripts]
foamstream-euxfel = "foamstream.euxfel.app:application"
foamstream-tomcat = "foamstream.sls.tomcat:main"
foamstream-debye = "foamstream.sls.debye:main"

[tool.setuptools.package-data]
"foamstream.euxfel.icons" = ["*.png"]

[project.urls]
repository = "https://github.com/zhujun98/foamstream"
